<resources>
    <string name="app_name">CEDUP VAGAS</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="fazer_login">Fazer login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="salvar">Salvar</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="telefone">Telefone</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="matr_cula">Matrícula</string>
    <string name="nome">Nome</string>
    <string name="setor">Setor</string>
    <string name="local">Local</string>
    <string name="hor_rio">Horário</string>
    <string name="requisitos">Requisitos</string>
    <string name="beneficios">Beneficios</string>
    <string name="atividades">Atividades</string>
    <string name="curso">Curso</string>
    <string name="empresa">Empresa</string>
    <string name="sal_rio">Salário</string>
    <string name="emprego">Emprego</string>
    <string name="est_gio">Estágio</string>
    <string name="tipo_da_vaga">Tipo da vaga</string>
    <string name="cadastro">Clique aqui caso você não possua uma conta!</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bem_vindo">Bem vindo!</string>
    <string name="login">Login</string>
    <string name="opcoes">Opções</string>
    <string name="vagas">Vagas</string>
    <string name="perfil">Perfil</string>
    <string name="tipo">Tipo</string>
    <string name="sair">Sair</string>
    <string name="cadastrar_admin">Cadastrar admin</string>
    <string name="sexo">Sexo</string>
    <string name="data_de_nasc">Data de nasc.</string>
    <string name="d_de_nascimento">D. de nascimento</string>
    <string name="nascimento">Nascimento</string>
    <string name="editar">Editar</string>
    <string name="turma">Turma</string>
    <string name="n_mero">Número</string>
    <string name="cadastrar_administrador">Cadastrar administrador</string>
    <string name="administrador">Administrador</string>
    <string name="turmas">Turmas</string>
    <string name="cursos">Cursos</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="tenho_interesse_na_vaga">Tenho interesse na vaga</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="solicita_es">Solicitações</string>
    <string name="vaga_solicitada">Vaga solicitada</string>
    <string name="aluno">Aluno</string>
    <string name="excluir">Excluir</string>
    <string name="carregando">CARREGANDO...</string>
    <string name="por_favor_aguarde">Por favor aguarde</string>
    <string name="cadastrar_adminstrador">Cadastrar adminstrador</string>
    <string name="cadastrar_curso">Cadastrar curso</string>
    <string name="cadastrar_turma">Cadastrar turma</string>
    <string name="cadastrar_vaga">Cadastrar vaga</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="editar_vaga">Editar vaga</string>
</resources>
