<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.CadastrosActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnVagas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/vagas"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/bg_button"
        android:textColor="@color/white"
        android:foreground="?android:attr/selectableItemBackground"/>

    <Button
        android:id="@+id/btnCursos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cursos"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/bg_button"
        android:textColor="@color/white"
        android:foreground="?android:attr/selectableItemBackground"/>

    <Button
        android:id="@+id/btnTurmas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/turmas"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/bg_button"
        android:textColor="@color/white"
        android:foreground="?android:attr/selectableItemBackground"/>

    <Button
        android:id="@+id/btnAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/administrador"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/bg_button"
        android:textColor="@color/white"
        android:foreground="?android:attr/selectableItemBackground"/>

</LinearLayout>